2023-11-11T08:15:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6833092371 # 1349
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-11
* notice: last 14d: unq all: 5 4157
* notice: prev accum: outdated-unq outdated-all / unq all: 1819 173983 / 1855 178196
* notice: next accum: outdated-unq outdated-all / unq all: 1819 173983 / 1857 178307
* notice: prev exec diff / last date diff / accum: unq all: +2 +111 -0 -116 / +2 +111 -0 -0 / 2 111
* notice: removed / changed dates: [] / [2023-10-28 2023-11-11]

2023-11-11T00:59:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6831155589 # 1348
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-11
* notice: last 14d: unq all: 5 4162
* notice: prev accum: outdated-unq outdated-all / unq all: 1817 173683 / 1855 178102
* notice: next accum: outdated-unq outdated-all / unq all: 1819 173983 / 1855 178196
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -51 / +2 +300 -0 -0 / 2 300
* notice: removed / changed dates: [2023-10-27] / [2023-10-28 2023-11-10]

2023-11-10T16:17:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6827189704 # 1347
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-10
* notice: last 14d: unq all: 5 4159
* notice: prev accum: outdated-unq outdated-all / unq all: 1817 173683 / 1855 178008
* notice: next accum: outdated-unq outdated-all / unq all: 1817 173683 / 1855 178102
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -1 -93 / +2 +206 -0 -0 / 2 206
* notice: removed / changed dates: [] / [2023-10-27 2023-11-10]

2023-11-10T08:16:32Z: