@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-11-11T08:15:16Z",
+  "timestamp" : "2023-11-11T16:15:44Z",
   "count_outdated" : 173983,
   "uniques_outdated" : 1819,
-  "count" : 178307,
+  "count" : 178400,
   "uniques" : 1857,
   "clones" : [
     {
       "timestamp": "2023-10-28T00:00:00Z",
-      "count": 134,
-      "count_minmax": [ 112, 301 ],
-      "count_decinc": [ 167, 301 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 40,
+      "count_minmax": [ 40, 301 ],
+      "count_decinc": [ 261, 301 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-10-29T00:00:00Z",
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-11-11T00:00:00Z",
-      "count": 111,
-      "count_minmax": [ 111, 111 ],
-      "count_decinc": [ 0, 111 ],
+      "count": 204,
+      "count_minmax": [ 111, 204 ],
+      "count_decinc": [ 0, 204 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
