@@ -1,11 +1,11 @@
 {
-  "count": 4157,
+  "count": 4156,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2023-10-28T00:00:00Z",
-      "count": 134,
-      "uniques": 2
+      "count": 40,
+      "uniques": 1
     },
     {
       "timestamp": "2023-10-29T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-11-11T00:00:00Z",
-      "count": 111,
+      "count": 204,
       "uniques": 2
     }
   ]
