@@ -1,3 +1,12 @@
+2023-11-11T16:15:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6835293222 # 1350
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-11
+* notice: last 14d: unq all: 5 4156
+* notice: prev accum: outdated-unq outdated-all / unq all: 1819 173983 / 1857 178307
+* notice: next accum: outdated-unq outdated-all / unq all: 1819 173983 / 1857 178400
+* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -1 -94 / +2 +204 -0 -0 / 2 204
+* notice: removed / changed dates: [] / [2023-10-28 2023-11-11]
+
 2023-11-11T08:15:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6833092371 # 1349
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-11
